--- a/blogpost.html
+++ b/blogpost.html
@@ -3,11 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>EL título del Post</title>
     <link rel="stylesheet" href="css/estilos.css">
 </head>
 <body>
-    <h1>Aquí vamos a hacer un post del blog</h1>
-    <p>Pequeño párrafo</p>
+    <div class="container">
+        <h1>Este es el título atractivo e  insteresante del post</h1>
+        <p>Y este es el párrafo de inicio donde vamos a explicar las cosas increíbles</p>
+    </div>
 </body>
 </html>
