--- a/blogpost.html
+++ b/blogpost.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <div class="container">
+        <h3>Cabecera</h3>
         <h1>Este es el título atractivo e  insteresante del post</h1>
         <p>Y este es el párrafo de inicio donde vamos a explicar las cosas increíbles</p>
     </div>
